--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   font_awesome_flutter: ^10.10.0
   flutter_svg: ^2.2.0
+  carousel_slider: ^5.1.1
   flutter_localizations:
     sdk: flutter
   intl: any
