--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   font_awesome_flutter: ^10.10.0
   flutter_svg: ^2.2.0
   carousel_slider: ^5.1.1
+  equatable: ^2.0.7
+  shared_preferences: ^2.5.3
   flutter_localizations:
     sdk: flutter
   intl: any
