--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   carousel_slider: ^5.1.1
   equatable: ^2.0.7
   shared_preferences: ^2.5.3
+  firebase_auth: ^6.0.1
+  cloud_firestore: ^6.0.0
+  firebase_core: ^4.0.0
   flutter_localizations:
     sdk: flutter
   intl: any
