--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_auth: ^6.0.1
   cloud_firestore: ^6.0.0
   firebase_core: ^4.0.0
+  bottom_navy_bar: ^6.1.0
   flutter_localizations:
     sdk: flutter
   intl: any
