--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,10 +49,15 @@ dependencies:
   cloud_firestore: ^6.0.0
   firebase_core: ^4.0.0
   bottom_navy_bar: ^6.1.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.5
   flutter_localizations:
     sdk: flutter
   intl: any
 dev_dependencies:
+  build_runner: ^2.4.13
+  hive_generator: ^2.0.1
   flutter_test:
     sdk: flutter
 
