--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: any
+  data_connection_checker_tv: ^0.3.5-nullsafety
 dev_dependencies:
   build_runner: ^2.4.13
   hive_generator: ^2.0.1
