--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
     sdk: flutter
   intl: any
   data_connection_checker_tv: ^0.3.5-nullsafety
+  dartz: ^0.10.1
 dev_dependencies:
   build_runner: ^2.4.13
   hive_generator: ^2.0.1
