--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  google_fonts: ^6.3.0
+  google_fonts: ^6.3.1
   dio: ^5.9.0
   bloc: ^9.0.0
   flutter_bloc: ^9.1.1
@@ -45,14 +45,16 @@ dependencies:
   carousel_slider: ^5.1.1
   equatable: ^2.0.7
   shared_preferences: ^2.5.3
-  firebase_auth: ^6.0.1
-  cloud_firestore: ^6.0.0
-  firebase_core: ^4.0.0
+  firebase_auth: ^6.0.2
+  cloud_firestore: ^6.0.1
+  firebase_core: ^4.1.0
   bottom_navy_bar: ^6.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.1.5
   cached_network_image: ^3.4.1
+  injectable: ^2.5.1
+  get_it: ^8.2.0
   flutter_localizations:
     sdk: flutter
   intl: any
@@ -61,6 +63,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.4.13
   hive_generator: ^2.0.1
+  injectable_generator: ^2.6.2
   flutter_test:
     sdk: flutter
 
