--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.1
+  google_sign_in: ^7.1.1
   dio: ^5.9.0
   bloc: ^9.0.0
   flutter_bloc: ^9.1.1
   flutter_native_splash: ^2.4.6
   flutter_screenutil: ^5.9.3
   font_awesome_flutter: ^10.10.0
-  flutter_svg: ^2.2.0
+  flutter_svg: ^2.2.1
   carousel_slider: ^5.1.1
   equatable: ^2.0.7
   shared_preferences: ^2.5.3
