--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   cached_network_image: ^3.4.1
   injectable: ^2.5.1
   get_it: ^8.2.0
+  flutter_dotenv: ^6.0.0
   flutter_localizations:
     sdk: flutter
   intl: any
@@ -90,6 +91,7 @@ flutter:
   assets:
     - assets/images/
     - assets/svgs/
+    - .env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
